<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mosaic.happin.MainPage">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/mainMenuSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/signOut"
        android:orderInCategory="100"
        android:title="@string/signOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/addbutton"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:imeOptions="actionSearch"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
