<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pswdChange"
    android:textStyle="bold"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <View

        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/oldpsw"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/oldpswdRST"/>
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/newpsw"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/newpswdRST"/>
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/oldpsw"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/newConpswdRST"/>
</LinearLayout>