<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_report_black_24dp"
        android:id="@+id/alertImageView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin" />
    <TextView
        android:layout_toRightOf="@id/alertImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteTitle"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/deleteTitle"/>
    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/alertImageView"/>
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/acDelEmail"
        android:layout_below="@+id/separator1"/>
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/psw"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/acDelpswd"
        android:layout_below="@+id/acDelEmail"/>

</RelativeLayout>